--- a/Data Clean Up.ipynb
+++ b/Data Clean Up.ipynb
@@ -2,18 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-62-0100ff4c9acf>, line 12)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;36m  File \u001B[1;32m\"<ipython-input-62-0100ff4c9acf>\"\u001B[1;36m, line \u001B[1;32m12\u001B[0m\n\u001B[1;33m    df['Franchise:'] = [w.strip('[]\\'') for w in df['Franchise:'] if isinstance(w, str) else w]\u001B[0m\n\u001B[1;37m                                                                                           ^\u001B[0m\n\u001B[1;31mSyntaxError\u001B[0m\u001B[1;31m:\u001B[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd \n",
     "\n",
-    "df = pd.read_csv('fp2.csv')"
+    "df = pd.read_csv('fp2.csv')\n",
+    "\n",
+    "def clean(col1, col2):\n",
+    "    df[col1] = df[col2].astype(str) + df[col1].astype(str)\n",
+    "    df[col1] = [w.replace('nan', '').strip('[]\\'').replace(\"'\", '').replace(', ', ';') for w in df[col1]]\n",
+    "\n",
+    "for c1, c2 in zip(['Title', 'Year', 'Publisher', 'Genre'], ['Title:', 'Release Date:', 'Publisher:', 'Genre:']):\n",
+    "    clean(c1, c2)\n",
+    "\n",
+    "df['Franchise:'] = [w.strip('[]\\'') for w in df['Franchise:'] if isinstance(w, str) else w]\n",
+    "df = df.drop(['Title:', 'Release Date:', 'Publisher:', 'Genre:'], axis=1)\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -67,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -139,11 +159,7 @@
      "output_type": "stream",
      "text": [
       "Title:\n",
-      "Genre:\n",
-      "Developer:\n",
-      "Publisher:\n",
-      "Release Date:\n",
-      "Franchise:\n"
+      "Genre:\n"
      ]
     }
    ],
@@ -600,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
