--- a/Data Clean Up.ipynb
+++ b/Data Clean Up.ipynb
@@ -2,16 +2,336 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-62-0100ff4c9acf>, line 12)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;36m  File \u001B[1;32m\"<ipython-input-62-0100ff4c9acf>\"\u001B[1;36m, line \u001B[1;32m12\u001B[0m\n\u001B[1;33m    df['Franchise:'] = [w.strip('[]\\'') for w in df['Franchise:'] if isinstance(w, str) else w]\u001B[0m\n\u001B[1;37m                                                                                           ^\u001B[0m\n\u001B[1;31mSyntaxError\u001B[0m\u001B[1;31m:\u001B[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Publisher</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>Platform</th>\n",
+       "      <th>Metascore</th>\n",
+       "      <th>Avg_Userscore</th>\n",
+       "      <th>No_Players</th>\n",
+       "      <th>Developer:</th>\n",
+       "      <th>Discounted Price</th>\n",
+       "      <th>Number of Ratings</th>\n",
+       "      <th>Percentage of Positive Reviews</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Franchise:</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>The Legend of Zelda: Ocarina of Time</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>Nintendo</td>\n",
+       "      <td>Action Adventure;Fantasy</td>\n",
+       "      <td>Nintendo64</td>\n",
+       "      <td>99</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>1 Player</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Tony Hawks Pro Skater 2</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>NeversoftEntertainment</td>\n",
+       "      <td>Sports;Alternative;Skateboarding</td>\n",
+       "      <td>PlayStation</td>\n",
+       "      <td>98</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>1-2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Tony Hawks Pro Skater 2</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>Treyarch</td>\n",
+       "      <td>Sports;Alternative;Skateboarding</td>\n",
+       "      <td>Dreamcast</td>\n",
+       "      <td>97</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>not specified</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Tony Hawks Pro Skater 2</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>VicariousVisions</td>\n",
+       "      <td>Sports;Alternative;Skateboarding</td>\n",
+       "      <td>GameBoyAdvance</td>\n",
+       "      <td>95</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>not specified</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Tony Hawks Pro Skater 2</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>NeversoftEntertainment</td>\n",
+       "      <td>Sports;Alternative;Individual;Skateboarding;Sk...</td>\n",
+       "      <td>PC</td>\n",
+       "      <td>91</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>1-4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5847</th>\n",
+       "      <td>5847</td>\n",
+       "      <td>KingdomUnderFire2</td>\n",
+       "      <td>Nov182019</td>\n",
+       "      <td>Gameforge 4D GmbH\\t</td>\n",
+       "      <td>Action;Massively Multiplayer;RPG;Strategy</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Blueside</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1399.0</td>\n",
+       "      <td>73%</td>\n",
+       "      <td>$9.99</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5848</th>\n",
+       "      <td>5848</td>\n",
+       "      <td>Thief</td>\n",
+       "      <td>Feb272014</td>\n",
+       "      <td>Square Enix;Feral Interactive (Mac)</td>\n",
+       "      <td>Action;Adventure</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Eidos-Montréal', 'Feral Interactive (Mac)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11296.0</td>\n",
+       "      <td>72%</td>\n",
+       "      <td>$19.99</td>\n",
+       "      <td>Thief</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5849</th>\n",
+       "      <td>5849</td>\n",
+       "      <td>STARWARSTheForceUnleashedUltimateSithEdition</td>\n",
+       "      <td>Nov32009</td>\n",
+       "      <td>LucasArts;Lucasfilm;Disney</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LucasArts</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3805.0</td>\n",
+       "      <td>69%</td>\n",
+       "      <td>$19.99</td>\n",
+       "      <td>Star Wars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5850</th>\n",
+       "      <td>5850</td>\n",
+       "      <td>BloodBowl2LegendaryEdition</td>\n",
+       "      <td>Sep52017</td>\n",
+       "      <td>Focus Home Interactive</td>\n",
+       "      <td>Sports;Strategy;Violent;Gore</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cyanide Studios', 'Cyanide Studio</td>\n",
+       "      <td>$8.99</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>No Rating</td>\n",
+       "      <td>$29.99</td>\n",
+       "      <td>Warhammer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5851</th>\n",
+       "      <td>5851</td>\n",
+       "      <td>ISLANDERS</td>\n",
+       "      <td>Apr42019</td>\n",
+       "      <td>GrizzlyGames</td>\n",
+       "      <td>Casual;Indie;Strategy</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>GrizzlyGames</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8276.0</td>\n",
+       "      <td>95%</td>\n",
+       "      <td>$4.99</td>\n",
+       "      <td>GrizzlyGames</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5852 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0                                         Title       Year  \\\n",
+       "0              0          The Legend of Zelda: Ocarina of Time       1998   \n",
+       "1              1                       Tony Hawks Pro Skater 2       2000   \n",
+       "2              2                       Tony Hawks Pro Skater 2       2000   \n",
+       "3              3                       Tony Hawks Pro Skater 2       2001   \n",
+       "4              4                       Tony Hawks Pro Skater 2       2000   \n",
+       "...          ...                                           ...        ...   \n",
+       "5847        5847                             KingdomUnderFire2  Nov182019   \n",
+       "5848        5848                                         Thief  Feb272014   \n",
+       "5849        5849  STARWARSTheForceUnleashedUltimateSithEdition   Nov32009   \n",
+       "5850        5850                    BloodBowl2LegendaryEdition   Sep52017   \n",
+       "5851        5851                                     ISLANDERS   Apr42019   \n",
+       "\n",
+       "                                Publisher  \\\n",
+       "0                                Nintendo   \n",
+       "1                  NeversoftEntertainment   \n",
+       "2                                Treyarch   \n",
+       "3                        VicariousVisions   \n",
+       "4                  NeversoftEntertainment   \n",
+       "...                                   ...   \n",
+       "5847                  Gameforge 4D GmbH\\t   \n",
+       "5848  Square Enix;Feral Interactive (Mac)   \n",
+       "5849           LucasArts;Lucasfilm;Disney   \n",
+       "5850               Focus Home Interactive   \n",
+       "5851                         GrizzlyGames   \n",
+       "\n",
+       "                                                  Genre        Platform  \\\n",
+       "0                              Action Adventure;Fantasy      Nintendo64   \n",
+       "1                      Sports;Alternative;Skateboarding     PlayStation   \n",
+       "2                      Sports;Alternative;Skateboarding       Dreamcast   \n",
+       "3                      Sports;Alternative;Skateboarding  GameBoyAdvance   \n",
+       "4     Sports;Alternative;Individual;Skateboarding;Sk...              PC   \n",
+       "...                                                 ...             ...   \n",
+       "5847          Action;Massively Multiplayer;RPG;Strategy             NaN   \n",
+       "5848                                   Action;Adventure             NaN   \n",
+       "5849                                             Action             NaN   \n",
+       "5850                       Sports;Strategy;Violent;Gore             NaN   \n",
+       "5851                              Casual;Indie;Strategy             NaN   \n",
+       "\n",
+       "     Metascore Avg_Userscore     No_Players  \\\n",
+       "0           99           9.1       1 Player   \n",
+       "1           98           7.4           1-2    \n",
+       "2           97           6.2  not specified   \n",
+       "3           95           7.0  not specified   \n",
+       "4           91           8.5           1-4    \n",
+       "...        ...           ...            ...   \n",
+       "5847       NaN           NaN            NaN   \n",
+       "5848       NaN           NaN            NaN   \n",
+       "5849       NaN           NaN            NaN   \n",
+       "5850       NaN           NaN            NaN   \n",
+       "5851       NaN           NaN            NaN   \n",
+       "\n",
+       "                                     Developer:           Discounted Price  \\\n",
+       "0                                           NaN                        NaN   \n",
+       "1                                           NaN                        NaN   \n",
+       "2                                           NaN                        NaN   \n",
+       "3                                           NaN                        NaN   \n",
+       "4                                           NaN                        NaN   \n",
+       "...                                         ...                        ...   \n",
+       "5847                                   Blueside                        NaN   \n",
+       "5848  Eidos-Montréal', 'Feral Interactive (Mac)                        NaN   \n",
+       "5849                                  LucasArts                        NaN   \n",
+       "5850          Cyanide Studios', 'Cyanide Studio  $8.99                       \n",
+       "5851                               GrizzlyGames                        NaN   \n",
+       "\n",
+       "      Number of Ratings Percentage of Positive Reviews   Price    Franchise:  \n",
+       "0                   NaN                            NaN     NaN           NaN  \n",
+       "1                   NaN                            NaN     NaN           NaN  \n",
+       "2                   NaN                            NaN     NaN           NaN  \n",
+       "3                   NaN                            NaN     NaN           NaN  \n",
+       "4                   NaN                            NaN     NaN           NaN  \n",
+       "...                 ...                            ...     ...           ...  \n",
+       "5847             1399.0                            73%   $9.99           NaN  \n",
+       "5848            11296.0                            72%  $19.99         Thief  \n",
+       "5849             3805.0                            69%  $19.99     Star Wars  \n",
+       "5850                0.0                      No Rating  $29.99     Warhammer  \n",
+       "5851             8276.0                            95%   $4.99  GrizzlyGames  \n",
+       "\n",
+       "[5852 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -26,7 +346,8 @@
     "for c1, c2 in zip(['Title', 'Year', 'Publisher', 'Genre'], ['Title:', 'Release Date:', 'Publisher:', 'Genre:']):\n",
     "    clean(c1, c2)\n",
     "\n",
-    "df['Franchise:'] = [w.strip('[]\\'') for w in df['Franchise:'] if isinstance(w, str) else w]\n",
+    "df['Franchise:'] = [w.strip('[]\\'') if isinstance(w, str) else w for w in df['Franchise:']]\n",
+    "df['Developer:'] = [w.strip('[]\\'') if isinstance(w, str) else w for w in df['Developer:']]\n",
     "df = df.drop(['Title:', 'Release Date:', 'Publisher:', 'Genre:'], axis=1)\n",
     "df"
    ]
