--- a/Data Clean Up.ipynb
+++ b/Data Clean Up.ipynb
@@ -806,7 +806,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df.to_csv(\"new_data\")"
