--- a/Final Clean-Up Code.ipynb
+++ b/Final Clean-Up Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>The Legend of Zelda: Ocarina of Time</td>\n",
        "      <td>1998</td>\n",
@@ -71,7 +71,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Tony Hawk's Pro Skater 2</td>\n",
        "      <td>2000</td>\n",
@@ -93,7 +93,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>Tony Hawk's Pro Skater 2</td>\n",
        "      <td>2000</td>\n",
@@ -115,7 +115,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>Tony Hawk's Pro Skater 2</td>\n",
        "      <td>2001</td>\n",
@@ -137,7 +137,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>Tony Hawk's Pro Skater 2</td>\n",
        "      <td>2000</td>\n",
@@ -159,7 +159,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>...</td>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -181,7 +181,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5847</td>\n",
+       "      <th>5847</th>\n",
        "      <td>5847</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -203,7 +203,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5848</td>\n",
+       "      <th>5848</th>\n",
        "      <td>5848</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -225,7 +225,7 @@
        "      <td>['Thief']</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5849</td>\n",
+       "      <th>5849</th>\n",
        "      <td>5849</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -247,7 +247,7 @@
        "      <td>['Star Wars']</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5850</td>\n",
+       "      <th>5850</th>\n",
        "      <td>5850</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -269,7 +269,7 @@
        "      <td>['Warhammer']</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5851</td>\n",
+       "      <th>5851</th>\n",
        "      <td>5851</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -429,7 +429,7 @@
        "[5852 rows x 19 columns]"
       ]
      },
-     "execution_count": 330,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,37 +440,37 @@
     "import numpy as np\n",
     "\n",
     "# note: this is the dataframe acquired from webscraping and then merging with the metascore df\n",
-    "df = pd.read_csv('DrewFP2.csv')\n",
+    "df = pd.read_csv('fp2.csv')\n",
     "\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/saahilkumar/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:12: SettingWithCopyWarning: \n",
+      "C:\\Users\\drewb\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  if sys.path[0] == '':\n",
-      "/Users/saahilkumar/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:13: SettingWithCopyWarning: \n",
+      "C:\\Users\\drewb\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  del sys.path[0]\n",
-      "/Users/saahilkumar/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:14: SettingWithCopyWarning: \n",
+      "C:\\Users\\drewb\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  \n"
      ]
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>17</td>\n",
+       "      <th>17</th>\n",
        "      <td>GrandTheftAutoV]Grand Theft Auto V</td>\n",
        "      <td>2015</td>\n",
        "      <td>Action;Adventure;Modern;Action Adventure;Open-...</td>\n",
@@ -583,7 +583,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>54</td>\n",
+       "      <th>54</th>\n",
        "      <td>MassEffect2]Mass Effect 2</td>\n",
        "      <td>2010</td>\n",
        "      <td>RPG;Role-Playing;Action RPG;Action RPG</td>\n",
@@ -596,7 +596,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>89</td>\n",
+       "      <th>89</th>\n",
        "      <td>Portal2]Portal 2</td>\n",
        "      <td>2011</td>\n",
        "      <td>Action;Adventure;Action;Shooter;Shooter;First-...</td>\n",
@@ -609,7 +609,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>99</td>\n",
+       "      <th>99</th>\n",
        "      <td>BioShockInfinite]BioShock Infinite</td>\n",
        "      <td>2013</td>\n",
        "      <td>Action;Action;Shooter;Shooter;First-Person;Sci...</td>\n",
@@ -622,7 +622,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>143</td>\n",
+       "      <th>143</th>\n",
        "      <td>Celeste]Celeste</td>\n",
        "      <td>2018</td>\n",
        "      <td>Action;Adventure;Indie;Action;Platformer;2D</td>\n",
@@ -635,7 +635,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>...</td>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -648,7 +648,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5846</td>\n",
+       "      <th>5846</th>\n",
        "      <td>ZooTycoonUltimateAnimalCollection</td>\n",
        "      <td>2018</td>\n",
        "      <td>Simulation</td>\n",
@@ -661,7 +661,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5847</td>\n",
+       "      <th>5847</th>\n",
        "      <td>KingdomUnderFire2</td>\n",
        "      <td>2019</td>\n",
        "      <td>Action;Massively Multiplayer;RPG;Strategy</td>\n",
@@ -674,7 +674,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5848</td>\n",
+       "      <th>5848</th>\n",
        "      <td>Thief</td>\n",
        "      <td>2014</td>\n",
        "      <td>Action;Adventure</td>\n",
@@ -687,7 +687,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5849</td>\n",
+       "      <th>5849</th>\n",
        "      <td>STARWARSTheForceUnleashedUltimateSithEdition</td>\n",
        "      <td>2009</td>\n",
        "      <td>Action</td>\n",
@@ -700,7 +700,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5851</td>\n",
+       "      <th>5851</th>\n",
        "      <td>ISLANDERS</td>\n",
        "      <td>2019</td>\n",
        "      <td>Casual;Indie;Strategy</td>\n",
@@ -773,7 +773,7 @@
        "[906 rows x 10 columns]"
       ]
      },
-     "execution_count": 332,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +984,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>GrandTheftAutoV]Grand Theft Auto V</td>\n",
        "      <td>2015</td>\n",
        "      <td>96</td>\n",
@@ -1008,7 +1008,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>MassEffect2]Mass Effect 2</td>\n",
        "      <td>2010</td>\n",
        "      <td>94</td>\n",
@@ -1032,7 +1032,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>Portal2]Portal 2</td>\n",
        "      <td>2011</td>\n",
        "      <td>95</td>\n",
@@ -1056,7 +1056,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>BioShockInfinite]BioShock Infinite</td>\n",
        "      <td>2013</td>\n",
        "      <td>94</td>\n",
@@ -1080,7 +1080,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>Celeste]Celeste</td>\n",
        "      <td>2018</td>\n",
        "      <td>88</td>\n",
@@ -1104,7 +1104,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>...</td>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1128,7 +1128,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>901</td>\n",
+       "      <th>901</th>\n",
        "      <td>ZooTycoonUltimateAnimalCollection</td>\n",
        "      <td>2018</td>\n",
        "      <td>85</td>\n",
@@ -1152,7 +1152,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>902</td>\n",
+       "      <th>902</th>\n",
        "      <td>KingdomUnderFire2</td>\n",
        "      <td>2019</td>\n",
        "      <td>85</td>\n",
@@ -1176,7 +1176,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>903</td>\n",
+       "      <th>903</th>\n",
        "      <td>Thief</td>\n",
        "      <td>2014</td>\n",
        "      <td>85</td>\n",
@@ -1200,7 +1200,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>904</td>\n",
+       "      <th>904</th>\n",
        "      <td>STARWARSTheForceUnleashedUltimateSithEdition</td>\n",
        "      <td>2009</td>\n",
        "      <td>85</td>\n",
@@ -1224,7 +1224,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>905</td>\n",
+       "      <th>905</th>\n",
        "      <td>ISLANDERS</td>\n",
        "      <td>2019</td>\n",
        "      <td>85</td>\n",
@@ -1321,7 +1321,7 @@
        "[906 rows x 36 columns]"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1424,7 +1424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
